tests/cases/modules/ok/same_filename_project/left.ari
pub mod util;

pub fn value() -> i64 {
  return self::util::score() + 1;
}
